fixed footer sizing in medium media query to prevent wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -291,7 +291,7 @@ li:hover {
 
 
   .footer {
-    font-size: 1.25vw;
+    font-size: 1.1vw;
   }
 }
 
